<resources>
    <string name="app_name">SMS</string>
    <string name="app_logo">App Logo</string>
    <string name="udent">tudent</string>
    <string name="student_management_system">Student Management System</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
</resources>
